# skills-plugin-py

./: AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
plugin/example-plugin/: plugin.json
plugin/example-plugin/.codex-plugin/: plugin.json
plugin/example-plugin/skills/example-skill/: SKILL.md
plugin/example-plugin/skills/example-skill/assets/: records.example.json
plugin/example-plugin/skills/example-skill/references/: records-spec.schema.json
plugin/example-plugin/skills/example-skill/scripts/: summarize.py  summarize_records.py
skills/example-skill/: SKILL.md
tests/: conftest.py
tests/example_skill/: test_errors.py  test_summary.py
